chore: upgrade postgis-gtfs-importer image to v4-2024-09-24T15.06.43-9a66d7d
relevant breaking changes in postgis-gtfs-importer:
- https://github.com/mobidata-bw/postgis-gtfs-importer/commit/91a1beb3b6d90b8039ed7ae2e80248f0a4d95d97
- https://github.com/mobidata-bw/postgis-gtfs-importer/commit/437c147c49d89499f80e587f265e359d849e69c7
- https://github.com/mobidata-bw/postgis-gtfs-importer/commit/96c8b49c0f43686f1fd25b4a2c2ae4f9d83a8d72
- https://github.com/mobidata-bw/postgis-gtfs-importer/commit/3f1ff55d6d364d6db39272904abf3994c1604032

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -627,6 +627,7 @@ services:
       - ./etc/gtfs:/etc/gtfs
     environment:
       PGHOST: gtfs-db
+      PGPORT: 5432
       PGUSER: ${IPL_GTFS_DB_POSTGRES_USER:?missing/empty}
       PGPASSWORD: ${IPL_GTFS_DB_POSTGRES_PASSWORD:?missing/empty}
       # the default DB, used by gtfs-importer to keep track of imports
@@ -635,6 +636,7 @@ services:
       GTFS_DOWNLOAD_USER_AGENT: ${IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT:?missing/empty}
       # the prefix of all DBs created for imports by gtfs-importer
       GTFS_IMPORTER_DB_PREFIX: ${IPL_GTFS_DB_POSTGRES_DB_PREFIX:?missing/empty}
+      GTFS_IMPORTER_SCHEMA: api
       # path to the file containing the latest import's DB name
       GTFS_IMPORTER_DSN_FILE: /var/gtfs/pgbouncer-dsn.txt
       GTFS_TMP_DIR: /var/gtfs
