--- a/.env
+++ b/.env
@@ -56,7 +56,7 @@ IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 # gtfs-importer variables
 IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:v4-2024-09-24T15.06.43-9a66d7d
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
-IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT=MobiData-BW
+IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT=IPL (MobiData-BW)
 # This assumes, that the ipl platform is started in a directory `ipl` which's name becomes
 # the docker project name and is prefixed to the `ipl` network defined in docker-compose.
 # This var need's to be redefined in e.g. `.env.local` if run from a different dir.
