Add lamassu entityCache ttls

--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -53,6 +53,15 @@ org.entur.lamassu.baseUrl=${LAMASSU_BASE_URL}
 org.entur.lamassu.feedupdateinterval=${LAMASSU_FEED_UPATE_INTERVAL_IN_MS:21600000}
 # How long a feed should be cached, in case it is not updated in between, in seconds, default 6h
 org.entur.lamassu.feedCacheMinimumTtl=${LAMASSU_FEED_CACHE_MINIMUM_INTERVAL_IN_S:21600}
+# For entities, we set the cache (min and max ttl) to the feed cache interval as well.
+# Note that the cache ttl should be greater than 
+# "feed update interval + maximum expected station/vehicle feed ttl", as otherwise entities
+# might become stale and removed from the lamassu cache (=storage) before being updated again.
+org.entur.lamassu.stationEntityCacheMinimumTtl=${LAMASSU_FEED_CACHE_MINIMUM_INTERVAL_IN_S:21600}
+org.entur.lamassu.stationEntityCacheMaximumTtl=${LAMASSU_FEED_CACHE_MINIMUM_INTERVAL_IN_S:21600}
+org.entur.lamassu.vehicleEntityCacheMinimumTtl=${LAMASSU_FEED_CACHE_MINIMUM_INTERVAL_IN_S:21600}
+org.entur.lamassu.vehicleEntityCacheMaximumTtl=${LAMASSU_FEED_CACHE_MINIMUM_INTERVAL_IN_S:21600}
+
 
 ## Host / IP of internal load balancer for internal endpoints (as seen from docker-compose containers)
 org.entur.lamassu.internalLoadBalancer=http://lamassu:8080
