chore: GTFS import: move schema name into variable, also use it in dagster-pipeline
This is so that Dagster (dagster-pipeline) can pass it on when running gtfs-importer manually (as in: not via Docker Compose).

--- a/.env
+++ b/.env
@@ -61,6 +61,9 @@ IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT=IPL (MobiData-BW)
 # the docker project name and is prefixed to the `ipl` network defined in docker-compose.
 # This var need's to be redefined in e.g. `.env.local` if run from a different dir.
 IPL_GTFS_IMPORTER_NETWORK=ipl_ipl
+# Which schema to import into within each GTFS-dataset-specific PostgreSQL DB.
+# Note: don't modify this without also adapting etc/gtfs/postprocessing.d/* accordingly.
+IPL_GTFS_IMPORTER_SCHEMA=api
 
 # `postgrest` role used by the gtfs-api service (PostgREST)
 IPL_GTFS_DB_POSTGREST_USER=postgrest
