--- a/.env
+++ b/.env
@@ -54,7 +54,7 @@ IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
 IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 
 # gtfs-importer variables
-IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:v4-2024-10-03T22.54.08-d81cfdd
+IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:v4-2024-10-09T19.12.35-d771aa4
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT=IPL (MobiData-BW)
 # This assumes, that the ipl platform is started in a directory `ipl` which's name becomes
@@ -64,6 +64,8 @@ IPL_GTFS_IMPORTER_NETWORK=ipl_ipl
 # Which schema to import into within each GTFS-dataset-specific PostgreSQL DB.
 # Note: don't modify this without also adapting etc/gtfs/postprocessing.d/* accordingly.
 IPL_GTFS_IMPORTER_SCHEMA=api
+# Cost (as calculated by the PostgreSQL query planner) limit to all queries that can be made via gtfs-api.
+IPL_GTFS_API_COST_LIMIT=1000000
 
 # `postgrest` role used by the gtfs-api service (PostgREST)
 IPL_GTFS_DB_POSTGREST_USER=postgrest
