--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -645,6 +645,7 @@ services:
       GTFS_TMP_DIR: /var/gtfs
       POSTGREST_USER: ${IPL_GTFS_DB_POSTGREST_USER:?missing/empty}
       POSTGREST_PASSWORD: ${IPL_GTFS_DB_POSTGREST_PASSWORD:?missing/empty}
+      POSTGREST_STATEMENT_COST_LIMIT: ${IPL_GTFS_API_COST_LIMIT:?missing/empty}
 
   gtfs-api-docs:
     networks: [ipl]
