chore: gtfs-api: increase default query cost limit to 3m

--- a/.env
+++ b/.env
@@ -65,7 +65,8 @@ IPL_GTFS_IMPORTER_NETWORK=ipl_ipl
 # Note: don't modify this without also adapting etc/gtfs/postprocessing.d/* accordingly.
 IPL_GTFS_IMPORTER_SCHEMA=api
 # Cost (as calculated by the PostgreSQL query planner) limit to all queries that can be made via gtfs-api.
-IPL_GTFS_API_COST_LIMIT=1000000
+# 3.000.000 is roughly equivalent to 0.5s-15s.
+IPL_GTFS_API_COST_LIMIT=3000000
 
 # `postgrest` role used by the gtfs-api service (PostgREST)
 IPL_GTFS_DB_POSTGREST_USER=postgrest
