--- a/.env
+++ b/.env
@@ -30,8 +30,8 @@ IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
 
 # x2gbfs variables (Note: when changing the providers, be sure to check if the image version supports them)
-X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2024-10-22T06-13
-X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,stadtmobil_suedbaden,my-e-car,stadtwerk_tauberfranken,zeag_energie,flinkster,teilauto_neckar-alb,teilauto_biberach
+X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2024-10-28T06-10
+X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,stadtmobil_suedbaden,my-e-car,stadtwerk_tauberfranken,zeag_energie,flinkster,teilauto_neckar-alb,teilauto_biberach,oekostadt_renningen
 X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
 DEER_API_URL=https://deer.fleetster.de
