fix: gtfs-importer: work around possible postgis-gtfs-importer/curl-mirror bug
related: https://github.com/mobidata-bw/postgis-gtfs-importer/issues/10

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -626,6 +626,8 @@ services:
     volumes:
       - ./var/gtfs:/var/gtfs
       - ./etc/gtfs:/etc/gtfs
+      # mount modified download script
+      - ./etc/gtfs/download.sh:/importer/download.sh
     environment:
       PGHOST: gtfs-db
       PGPORT: 5432
