--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -427,6 +427,10 @@ services:
       - RADVIS_WFS_PASSWORD=${RADVIS_WFS_PASSWORD:?missing/empty}
       # Roadworks download url
       - ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=${ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL:?missing/empty}
+      # Webcam settings
+      - WEBCAM_FTP_SERVER=${IPL_WEBCAM_SERVER:?missing/empty}
+      - WEBCAM_FTP_USER=${WEBCAM_FTP_USER:?missing/empty}
+      - WEBCAM_FTP_PASSWORD=${WEBCAM_FTP_PASSWORD:?missing/empty}
     volumes:
       # Make docker API accessible so we can start containers in jobs
       - /var/run/docker.sock:/var/run/docker.sock
@@ -434,6 +438,8 @@ services:
       - ./var/dagster/storage/:/opt/dagster/dagster_home/storage/
       # mount www dir to republish downloaded datasets
       - ./var/www/datasets/:/var/www/
+      # Mount webcam dir
+      - ./var/webcam:/var/webcam
     depends_on:
         pgbouncer:
           condition: service_healthy
