--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -428,9 +428,10 @@ services:
       # Roadworks download url
       - ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=${ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL:?missing/empty}
       # Webcam settings
-      - WEBCAM_FTP_SERVER=${IPL_WEBCAM_SERVER:?missing/empty}
+      - WEBCAM_FTP_SERVER=${WEBCAM_FTP_SERVER:?missing/empty}
       - WEBCAM_FTP_USER=${WEBCAM_FTP_USER:?missing/empty}
       - WEBCAM_FTP_PASSWORD=${WEBCAM_FTP_PASSWORD:?missing/empty}
+      - WEBCAM_KEEP_DAYS=${WEBCAM_KEEP_DAYS:?missing/empty}
     volumes:
       # Make docker API accessible so we can start containers in jobs
       - /var/run/docker.sock:/var/run/docker.sock
