password protected webcam images via caddy

--- a/.env.local.example
+++ b/.env.local.example
@@ -113,3 +113,4 @@ ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=https://url
 WEBCAM_FTP_SERVER=server
 WEBCAM_FTP_USER=user
 WEBCAM_FTP_PASSWORD=password
+WEBCAM_BASIC_AUTH=secret
