--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -435,8 +435,8 @@ services:
       - IPL_WEBCAM_SERVER=${WEBCAM_FTP_SERVER:?missing/empty}
       - IPL_WEBCAM_USER=${WEBCAM_FTP_USER:?missing/empty}
       - IPL_WEBCAM_PASSWORD=${WEBCAM_FTP_PASSWORD:?missing/empty}
-      - WEBCAM_KEEP_DAYS=${WEBCAM_KEEP_DAYS:?missing/empty}
       - IPL_WEBCAM_KEEP_DAYS=${WEBCAM_KEEP_DAYS:?missing/empty}
+      - IPL_WEBCAM_WORKER=${WEBCAM_WORKER:?missing/empty}
     volumes:
       # Make docker API accessible so we can start containers in jobs
       - /var/run/docker.sock:/var/run/docker.sock
