--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -191,6 +191,17 @@ services:
       - FLINKSTER_CLIENT_ID=${FLINKSTER_CLIENT_ID:?missing/empty}
       - FLINKSTER_SECRET=${FLINKSTER_SECRET:?missing/empty}
     restart: unless-stopped
+    healthcheck:
+      test: ps aux | grep -q 'x2gbfs\.x2gbfs' || exit 1
+      # If you want to wait until all feeds have been generated 
+      # before depending lamassu starts subscribing them, 
+      # configure an appropriate startup_period, e.g. 60s
+      # Otherwise, lamassu might update them only after the 
+      # update interval period has passed, which for test might
+      # last several hours.
+      start_interval: ${X2GBFS_HEALTHCHECK_START_INTERVAL:-1s}
+      start_period: 1s
+      interval: 60s
 
   lamassu:
     networks: [ipl]
@@ -233,6 +244,8 @@ services:
         redis:
           condition: service_healthy
         transformer-proxy:
+          condition: service_started
+        x2gbfs:
           condition: service_started
     restart: unless-stopped
 
