--- a/.env
+++ b/.env
@@ -132,5 +132,6 @@ SFTP_IMAGE=atmoz/sftp:alpine-3.7
 SFTP_PORT=10022
 
 # Webcam
+# How many days (including the current) should be mirrored.
 WEBCAM_KEEP_DAYS=7
 WEBCAM_WORKER=10
