--- a/.env.local.example
+++ b/.env.local.example
@@ -113,4 +113,5 @@ ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=https://url
 WEBCAM_FTP_SERVER=server
 WEBCAM_FTP_USER=user
 WEBCAM_FTP_PASSWORD=password
+# BasicAuth for Traefik: https://doc.traefik.io/traefik/middlewares/http/basicauth/#configuration-examples
 WEBCAM_BASIC_AUTH=secret
