webcam at dagster pipeline (#263)
webcam images

--- a/.env
+++ b/.env
@@ -39,9 +39,9 @@ VOI_API_URL=https://lsd.raumobil.net/Broker/grid?platform=mobidata-bw&source=voi
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.9-bullseye
-DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2024-10-01T12-53
-DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2024-10-01T12-53
-DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2024-10-01T12-53
+DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2024-11-04t16-44
+DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2024-11-04t16-44
+DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2024-11-04T16-44
 DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_DB=postgres_db
 
@@ -56,7 +56,7 @@ IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 # gtfs-importer variables
 IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:v4-2024-10-24T17.43.02-76b148e
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
-IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT=IPL (MobiData-BW)
+IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT="IPL (MobiData-BW)"
 # This assumes, that the ipl platform is started in a directory `ipl` which's name becomes
 # the docker project name and is prefixed to the `ipl` network defined in docker-compose.
 # This var need's to be redefined in e.g. `.env.local` if run from a different dir.
@@ -92,7 +92,7 @@ GEOSERVER_PROXY_BASE_URL=http://localhost:8600/geoserver
 GEOSERVER_CSRF_WHITELIST=mobidata-bw.de
 # NOTE: When bumping GEOSERVER_IMAGE, mind to bump the GEOSERVER_PLUGIN_DYNAMIC_URLS accordingly
 GEOSERVER_IMAGE=geosolutionsit/geoserver:2.25.3
-GEOSERVER_PLUGIN_DYNAMIC_URLS=https://sourceforge.net/projects/geoserver/files/GeoServer/2.25.3/extensions/geoserver-2.25.3-vectortiles-plugin.zip https://sourceforge.net/projects/geoserver/files/GeoServer/2.25.3/extensions/geoserver-2.25.3-inspire-plugin.zip
+GEOSERVER_PLUGIN_DYNAMIC_URLS="https://sourceforge.net/projects/geoserver/files/GeoServer/2.25.3/extensions/geoserver-2.25.3-vectortiles-plugin.zip https://sourceforge.net/projects/geoserver/files/GeoServer/2.25.3/extensions/geoserver-2.25.3-inspire-plugin.zip"
 GEOSERVER_PORT=8600
 GEOSERVER_INITIAL_MEMORY=512M
 GEOSERVER_MAXIMUM_MEMORY=4G
@@ -130,3 +130,8 @@ GOACCESS_KEEP_LAST_DAYS=60
 # SFTP
 SFTP_IMAGE=atmoz/sftp:alpine-3.7
 SFTP_PORT=10022
+
+# Webcam
+# How many days (including the current) should be mirrored.
+WEBCAM_KEEP_DAYS=7
+WEBCAM_WORKER=10
