--- a/.env.local.example
+++ b/.env.local.example
@@ -109,3 +109,9 @@ RADVIS_WFS_PASSWORD=secret
 # SVZBW DATEX2 Download URL
 ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=https://url
 
+# Webcam
+WEBCAM_FTP_SERVER=server
+WEBCAM_FTP_USER=user
+WEBCAM_FTP_PASSWORD=password
+# BasicAuth for Traefik: https://doc.traefik.io/traefik/middlewares/http/basicauth/#configuration-examples
+WEBCAM_BASIC_AUTH=secret
