--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,6 +160,8 @@ services:
       - ./etc/index-page:/var/www/index-page:ro
       # public IPL assets, e.g. traffic data (served on :80)
       - ./var/www/datasets:/var/www/datasets:ro
+      # webcam data (served on :80, password-protected by the `ingress` service)
+      - ./var/webcam:/var/www/webcam:ro
       # well-known URIs: security.txt, favicon.ico, etc. (served on :80)
       - ./etc/well-known:/var/www/well-known:ro
       # GoAccess access statistics reports (served on :81)
@@ -167,7 +169,10 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.caddy.rule=Path(`/`) || PathPrefix(`/datasets`) || PathPrefix(`/.well-known/`) || Path(`/robots.txt`) || Path(`/favicon.ico`)"
+      - "traefik.http.routers.caddy-webcam.rule=PathPrefix(`/webcam`)"
       - "traefik.http.services.caddy.loadbalancer.server.port=80"
+      - "traefik.http.routers.caddy-webcam.middlewares=caddy-webcam"
+      - "traefik.http.middlewares.caddy-webcam.basicauth.users=${WEBCAM_BASIC_AUTH:?missing/empty}"
 
   # This service requests non-standard sharing provider APIs and generates
   # a gbfs feed intended for local import into Lamassu. The volume needs to be
@@ -427,6 +432,12 @@ services:
       - RADVIS_WFS_PASSWORD=${RADVIS_WFS_PASSWORD:?missing/empty}
       # Roadworks download url
       - ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=${ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL:?missing/empty}
+      # Webcam settings
+      - IPL_WEBCAM_SERVER=${WEBCAM_FTP_SERVER:?missing/empty}
+      - IPL_WEBCAM_USER=${WEBCAM_FTP_USER:?missing/empty}
+      - IPL_WEBCAM_PASSWORD=${WEBCAM_FTP_PASSWORD:?missing/empty}
+      - IPL_WEBCAM_KEEP_DAYS=${WEBCAM_KEEP_DAYS:?missing/empty}
+      - IPL_WEBCAM_WORKER=${WEBCAM_WORKER:?missing/empty}
     volumes:
       # Make docker API accessible so we can start containers in jobs
       - /var/run/docker.sock:/var/run/docker.sock
@@ -434,6 +445,8 @@ services:
       - ./var/dagster/storage/:/opt/dagster/dagster_home/storage/
       # mount www dir to republish downloaded datasets
       - ./var/www/datasets/:/var/www/
+      # Mount webcam dir
+      - ./var/webcam:/var/webcam
     depends_on:
         pgbouncer:
           condition: service_healthy
