--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ Thumbs.db
 /etc/dagster/.telemetry
 /etc/dagster/logs
 /etc/park-api/config.secrets.yaml
+/etc/park-api/files/mobilithek-mobidata.crt.pem
+/etc/park-api/files/mobilithek-mobidata.key.pem
+
 /etc/ocpdb/config.secrets.yaml
 /etc/sftp
 
