--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ IPL_POSTGRES_USER=geoserver
 
 # x2gbfs variables (Note: when changing the providers, be sure to check if the image version supports them)
 X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2024-11-29T06-19
-X2GBFS_PROVIDERS=deer,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,stadtmobil_suedbaden,stadtwerk_tauberfranken,zeag_energie,flinkster,teilauto_neckar-alb,teilauto_biberach,oekostadt_renningen,gruene-flotte_freiburg
+X2GBFS_PROVIDERS=deer,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,stadtmobil_suedbaden,stadtwerk_tauberfranken,zeag_energie,teilauto_neckar-alb,teilauto_biberach,oekostadt_renningen,gruene-flotte_freiburg
 X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
 DEER_API_URL=https://deer.fleetster.de
