different codespace for voi_de and voi_ch
avoid ID collision for vehicle_type_id

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -200,7 +200,7 @@ lamassu:
     - systemId: voi_de
       operatorId: VOI:Operator:voi
       operatorName: VOI
-      codespace: VOI
+      codespace: VOJ
       url: "https://api.voiapp.io/gbfs/v2/gbfs.json"
       language: en
       authentication:
