Add private free2move_stuttgart feed

--- a/.env.local.example
+++ b/.env.local.example
@@ -43,6 +43,10 @@ DEER_PASSWORD=password
 FLINKSTER_CLIENT_ID=client_id
 FLINKSTER_SECRET=secret
 
+# Credentials for Free2move
+X2GBFS_FREE2MOVE_USER=user
+X2GBFS_FREE2MOVE_PASSWORD=secret
+
 # Url to the cantamen IXSI service. Note: this service is IP restricted
 CANTAMEN_IXSI_API_URL=http://example.org
 #Timeout for cantamen IXSI websocket connection in seconds
