Switch to GBFS_BASIC_ENV var instead of usersfile

--- a/.env.local.example
+++ b/.env.local.example
@@ -119,3 +119,6 @@ WEBCAM_FTP_USER=user
 WEBCAM_FTP_PASSWORD=password
 # BasicAuth for Traefik: https://doc.traefik.io/traefik/middlewares/http/basicauth/#configuration-examples
 WEBCAM_BASIC_AUTH=secret
+
+# BasicAuth to access restricted GBFS feeds
+GBFS_BASIC_AUTH=user1:hashed_password1,user2:hashed_password2
