--- a/.env.local.example
+++ b/.env.local.example
@@ -43,6 +43,10 @@ DEER_PASSWORD=password
 FLINKSTER_CLIENT_ID=client_id
 FLINKSTER_SECRET=secret
 
+# Credentials for Free2move
+X2GBFS_FREE2MOVE_USER=user
+X2GBFS_FREE2MOVE_PASSWORD=secret
+
 # Url to the cantamen IXSI service. Note: this service is IP restricted
 CANTAMEN_IXSI_API_URL=http://example.org
 #Timeout for cantamen IXSI websocket connection in seconds
@@ -115,3 +119,6 @@ WEBCAM_FTP_USER=user
 WEBCAM_FTP_PASSWORD=password
 # BasicAuth for Traefik: https://doc.traefik.io/traefik/middlewares/http/basicauth/#configuration-examples
 WEBCAM_BASIC_AUTH=secret
+
+# BasicAuth to access restricted GBFS feeds
+GBFS_BASIC_AUTH=user1:hashed_password1,user2:hashed_password2
